# product-walkthrough-mvp

./: .gitignore  README.md  VERSION_HISTORY.md  pyproject.toml
apps/web/: index.html  package-lock.json  package.json
docs/: api_event_contract.md  frontend_console_mvp_spec.md  frontend_console_mvp_user_flows.md  frontend_console_technical_spec.md  frontend_console_ux_spec.md  frontend_console_zh.md  whiteboard_feature_plan.md
docs/handoffs/: browser_use_backend_handoff.md  browser_use_frontend_handoff.md  browser_use_integration_audit.md  browser_use_real_smoke_handoff.md  phase1_architecture_handoff.md  phase1_final_handoff.md  phase1_ux_handoff.md  phase2_backend_handoff.md  phase2_final_handoff.md  phase2_pipeline_handoff.md  phase3_components_handoff.md  phase3_final_handoff.md  phase3_report_evidence_handoff.md  phase3_scaffold_handoff.md  phase4_backend_integration_handoff.md  phase4_contract_audit.md  phase4_final_handoff.md  phase4_frontend_integration_handoff.md  phase5_artifact_audit.md  phase5_backend_artifact_handoff.md  phase5_evidence_viewer_handoff.md  phase5_final_handoff.md  phase5_report_experience_handoff.md  phase5_run_history_evaluation_handoff.md  phase6_browser_use_backend_handoff.md  phase6_browser_use_frontend_handoff.md  phase6_browser_use_readiness_audit.md  phase6_docs_git_handoff.md  (+4 more)
examples/: clink_uat_full_continuous_plan.json  clink_uat_full_plan.json  clink_uat_plan.json  research_plan.json  smoke_plan.json
tests/: test_events.py  test_map_builder.py  test_mvp_pipeline.py  test_page_discovery.py  test_server.py
(+76 files in other folders)
