[project]
name = "product-walkthrough-mvp"
version = "0.4.5"
description = "MVP multi-agent product walkthrough research system"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
server = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
]
browser-use-local = [
  "browser-use[core]>=0.13.1,<0.14",
  "playwright>=1.40",
]
dev = [
  "pytest>=8.0.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
]

[project.scripts]
prodwalk = "prodwalk.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
